--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -34,13 +34,22 @@ jobs:
     - uses: actions/checkout@v3
       with:
         repository: ''
-        
-    - name: action-maven
+    
+    - name: Build with Maven
+      working-directory: ./app/
+      run: mvn -B package --file pom.xml
+      
+    - uses: actions/upload-artifact@v1
+      with:
+        name: my-artifact
+        path: app/target/verademo.war
+    
+    #- name: action-maven
     # You may pin to the exact commit or the version.
     # uses: comchangs/action-maven@54db702e085ac767dad94c87e84499afb9d77162
-      uses: comchangs/action-maven@v0.4-beta
+      #uses: comchangs/action-maven@v0.4-beta
 
-    - run: zip -r veracode-scan-target.zip ./
+    #- run: zip -r veracode-scan-target.zip ./
 
     # download the Veracode Static Analysis Pipeline scan jar
     - run: curl --silent --show-error --fail -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
@@ -50,12 +59,14 @@ jobs:
       with:
         java-version: 8
         distribution: 'temurin'
-    - run: java -jar pipeline-scan.jar --veracode_api_id "${{secrets.VERACODE_API_ID}}" --veracode_api_key "${{secrets.VERACODE_API_KEY}}" --fail_on_severity="Very High, High" --file veracode-scan-target.zip
+    - run: java -jar pipeline-scan.jar --veracode_api_id "${{secrets.VERACODE_API_ID}}" --veracode_api_key "${{secrets.VERACODE_API_KEY}}" --fail_on_severity="Very High, High" --file app/target/verademo.war
       continue-on-error: true
     - name: Convert pipeline scan output to SARIF format
       id: convert
       uses: veracode/veracode-pipeline-scan-results-to-sarif@ff08ae5b45d5384cb4679932f184c013d34da9be
       with:
+        source-base-path-1: "^com/veracode:app/src/main/java/com/veracode"
+        source-base-path-2: "^WEB-INF:app/src/main/webapp/WEB-INF"
         pipeline-results-json: results.json
     - uses: github/codeql-action/upload-sarif@v2
       with:
