--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -10,9 +10,9 @@ name: Veracode Static Analysis Pipeline Scan
 on:
   push:
     branches: [ main ]
-  pull_request:
+  #pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ main ]
+    #branches: [ main ]
   #schedule:
     #- cron: '29 22 * * 4'
 
