--- a/action.yml
+++ b/action.yml
@@ -21,9 +21,9 @@ jobs:
           filepath: 'app/target/verademo.war'
           vid: '${{ secrets.VERACODE_API_ID }}'
           vkey: '${{ secrets.VERACODE_API_KEY }}'
-#          createsandbox: 'true'
-#          sandboxname: 'SANDBOXNAME'
-#          scantimeout: 0
-#          exclude: '*.js'
-#          include: '*.war'
-#          criticality: 'VeryHigh'
+          createsandbox: 'true'
+          sandboxname: 'SANDBOXNAME'
+          scantimeout: 0
+          exclude: '*.js'
+          include: '*.war'
+          criticality: 'VeryHigh'
