--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -50,7 +50,7 @@ jobs:
       with:
         java-version: 8
         distribution: 'temurin'
-    - run: java -jar pipeline-scan.jar --veracode_api_id "${{secrets.VERACODE_API_ID}}" --veracode_api_key "${{secrets.VERACODE_API_KEY}}" --fail_on_severity="Very High, High" --file app/target/verademo.war
+    - run: java -jar pipeline-scan.jar --veracode_api_id "${{secrets.AA_VERACODE_API_ID}}" --veracode_api_key "${{secrets.AA_VERACODE_API_KEY}}" --fail_on_severity="Very High, High" --file app/target/verademo.war
       continue-on-error: true
     - name: Convert pipeline scan output to SARIF format
       id: convert
